<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/black_bg"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffcacaca"
        android:orientation="vertical"
        android:padding="20.0dip" >

        <TextView
            android:id="@+id/content_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10.0dip"
            android:textColor="@color/black"
            android:textSize="18.0dip"
            android:text="@string/Dialog1_08" />

        <TextView
            android:id="@+id/no_tv"
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:background="@drawable/button_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Dialog1_06"
            android:textColor="@drawable/delete_text_ok_selector" />

        <TextView
            android:id="@+id/yes_tv"
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:background="@drawable/button_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Dialog1_07"
            android:textColor="@drawable/delete_text_canel_selector" />
    
    </LinearLayout>

</LinearLayout>