<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:background="@drawable/ll_bg"
              android:gravity="center_vertical"
              android:orientation="vertical" >

    <TextView
        android:id="@+id/dlg0200_tile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center"
        android:text="提示"
        android:layout_marginTop="10dip"
        android:textColor="#499BF7"
        android:textSize="25dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="10dip">

        <TextView
            android:id="@+id/dlg0200_tvw010"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/dlg0200_tvw010_s01_0"
            android:textColor="#499BF7"
            android:textSize="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dlg0200_ett010"
            android:background="@drawable/edit_shape"
            android:visibility="gone"
            android:padding="5dip"
            android:textColorHint="#AAAAAA"
            android:textSize="15dip"
            android:singleLine="true"
            android:hint="请输入新名字..."
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/check_box_select"
            android:id="@+id/zhencheck"
            android:layout_marginLeft="10dp"
            android:button="@null"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="10dip">

        <TextView
            android:id="@+id/dlg0200_tvw011"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="ID"
            android:textColor="#499BF7"
            android:textSize="20dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/check_box_select"
            android:id="@+id/vioce_check"
            android:layout_marginLeft="10dp"
            android:button="@null"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="10dip">

        <TextView
            android:id="@+id/dlg0200_tvw012"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/dlg0200_tvw010_s01_1"
            android:textColor="#499BF7"
            android:textSize="20dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CBCED2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/dlg0200_btn010"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/left_btn_select"
            android:gravity="center"
            android:text="@string/dlg0100_btn010_s01"
            android:textColor="#499BF7"
            android:textSize="19dp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#CBCED2" />

        <Button
            android:id="@+id/dlg0200_btn020"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/right_btn_select"
            android:gravity="center"
            android:text="@string/dlg0100_btn020_s01"
            android:textColor="#499BF7"
            android:textSize="19dp" />
    </LinearLayout>


</LinearLayout>
